<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e000000"
    tools:context="com.it.rxapp_manager_android.module.base.download.UpdateVersionActivity">


    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_white_round_5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/item_margin">

        <!-- Title -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/update_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color_black" />


        </RelativeLayout>

        <!-- split -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />
        <!-- Content -->

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_update_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:focusable="true"
                    android:textColor="@color/text_color_black" />
            </LinearLayout>
        </ScrollView>

        <!-- OK&Cancel Button -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_update_id_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_gold_round"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/text_size_12"
                android:text="@string/update_now"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_update_id_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_gold_box"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/text_size_12"
                android:text="@string/not_now"
                android:textColor="@color/text_color_black" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
